k8s/prod/sqs-workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-worker
  namespace: prod
  labels:
    app: invoice-worker
    tier: worker
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: invoice-worker
  template:
    metadata:
      labels:
        app: invoice-worker
        tier: worker
    spec:
      serviceAccountName: invoice-worker
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: invoice-worker
          image: 649796199107.dkr.ecr.ap-south-1.amazonaws.com/chargeops/payment-service:latest
          imagePullPolicy: Always
          command: ["node", "workers/invoiceWorker.js"]
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-worker
  namespace: prod
  labels:
    app: notification-worker
    tier: worker
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: notification-worker
  template:
    metadata:
      labels:
        app: notification-worker
        tier: worker
    spec:
      serviceAccountName: notification-worker
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: notification-worker
          image: 649796199107.dkr.ecr.ap-south-1.amazonaws.com/chargeops/payment-service:latest
          imagePullPolicy: Always
          command: ["node", "workers/notificationWorker.js"]
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
